--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,7 @@ dependencies = [
     "google-genai==1.20.0",
     "litellm>=1.77.7",
     "mem0ai>=0.1.118",
+    "psycopg>=3.2.10",
+    "psycopg2-binary>=2.9.11",
     "python-dotenv>=1.1.1",
 ]
