--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "google-adk==1.4.1",
-    "google-cloud-aiplatform==1.97.0",
-    "google-genai==1.20.0",
-    "litellm>=1.77.7",
-    "mem0ai>=0.1.118",
-    "psycopg>=3.2.10",
-    "psycopg2-binary>=2.9.11",
+    "google-adk>=1.16.0",
+    "google-cloud-aiplatform>=1.120.0",
+    "google-genai>=1.43.0",
     "python-dotenv>=1.1.1",
 ]
